# Metis2

./: README.md
code/: CMakeLists.txt
code/assets/gv_fsm/: _fsm_middleware.dot  fsm.py
code/script/: inverse_geometry.py  test.py
code/src/: main.c
code/src/app/: fsm_middleware.c
code/src/app/include/: app_main.h  fsm_middleware.h
code/src/buffer/: buffer.c  buffer.h
code/src/gcode/: gcode.h
code/src/gripper_driver/: gripper_driver.h
code/src/inverse_geometry/: inverse_geometry.c  inverse_geometry.h
code/src/module_template/: module_template.h
code/src/modules/: buffer.cpp  delta_robot.cpp  hardware_driver.cpp  inverse_geometry.cpp  trajectory_generator.cpp
code/src/modules/buffer/: buffer.c  buffer.cpp  buffer.h
code/src/modules/buffer/tests/: test1  test1.cpp
code/src/modules/gcode/: gcode.c
code/src/modules/include/: buffer.h  comunication.h  configuration.h  data_t.h  delta_robot.h  errors.h  gcode.h  gripper_driver.h  hardware_driver.h  inverse_geometry.h  kernel.h  module.h  motion_planner.h  motor_driver.h  robot.h  task_manager.h  trajectory_generator.h
code/src/modules/inverse_geometry/: inverse_geometry.c  inverse_geometry.cpp  inverse_geometry.h  test  test.cpp
code/src/modules/inverse_geometry/tests/: test  test.cpp
code/src/modules/motion_planner/: motion_planner.c
code/src/modules/robot/: robot.c
code/src/modules/robot_description/: robot_description.h
code/src/modules/task_manager/: task_manager.c
code/src/modules/test/: bfr_test  bfr_test.cpp  ig_test  ig_test.cpp  trj_data.csv  trj_plot.py  trj_test  trj_test.cpp
code/src/modules/test/delta_robot/: dr_test.cpp
code/src/modules/test/inverse_geometry/: ig_test.cpp
code/src/modules/tests/: buffer_test  buffer_test.c
code/src/modules/trajectory_generator/: trajectory_generator.c  trajectory_generator.h
code/src/modules_bkp/: buffer.cpp  delta_robot.cpp  kernel.cpp  trajectory_generator.cpp
code/src/modules_bkp/example/: example.c
code/src/modules_bkp/include/: configuration.h  data_t.h  delta_robot.h  example.h  kernel.h  motion_planner.h  trajectory_generator.h
code/src/modules_bkp/test/buffer/: bfr_test  bfr_test.cpp
code/src/modules_bkp/test/delta_robot/: dr_test
code/src/modules_bkp/test/inverse_geometry/: ig_test
code/src/modules_bkp/test/trajectory_generator/: trj_data.csv  trj_plot.py  trj_test  (+1 more)
code/src/motion_planner/: motion_planner.c  motion_planner.h
code/src/motor_driver/: motor_driver.c  motor_driver.h
code/src/robot/: robot.h
code/src/trajectory_generator/: trajectory_generator.c  trajectory_generator.h
code/tests/: buffer_test.c  ig_test.c  tg_test.c
(+78 files in other folders)
